# OneDayOneCreate

./: README.md
projects/2026-2-20/note/: package.json  slides.md
projects/2026-2-20/pai314/: package.json  pnpm-lock.yaml  slides.md  style.css
projects/2026-2-22/: brand
projects/2026-2-25/init-project/: SKILL.md
projects/2026-2-25/init-project/agents/: openai.yaml
projects/2026-2-25/init-project/scripts/: init_project.py  template_contents.py
projects/2026-3-13/projects-guard/: README.md  evaluate.py  pyproject.toml  server.py
projects/2026-3-13/projects-guard/data/: evaluation_cases.json
projects/2026-3-13/projects-guard/src/projects_guard/: __init__.py  api.py  case_factory.py  evaluate.py  guard.py  models.py  scanner.py  server.py
projects/2026-3-13/projects-guard/tests/: test_guard.py
