[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "projects-guard"
version = "0.1.0"
description = "Prompt guard prototype for blocking secret exfiltration in autonomous agents."
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
selenium_exclude_debug = "false"
